--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue Jul 02 2024 15:53:55 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue Jul 02 2024 16:10:00 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="666ade87dad9b51af8c2b176" data-wf-site="6638da5561b8d28a43aa4afd">
 <head>
   <meta charset="utf-8">
@@ -187,8 +187,8 @@ input {
         <div>
           <div data-w-id="61d1732f-68b2-82db-2f66-889374ec7fe4" style="-webkit-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="brix---mg-bottom-64px">
             <div data-netlify="true" class="brix---card-form-v2 w-form">
-              <form id="wf-form-BRIX---Contact-V2" name="wf-form-BRIX---Contact-V2" data-name="BRIX - Contact V2" action="/succes" method="post" data-wf-page-id="666ade87dad9b51af8c2b176" data-wf-element-id="61d1732f-68b2-82db-2f66-889374ec7fe6">
-                <div class="w-layout-grid brix---form-grid-2-columns">
+              <form id="wf-form-contact" name="wf-form-contact" data-name="contact" action="/succes" method="post" data-wf-page-id="666ade87dad9b51af8c2b176" data-wf-element-id="61d1732f-68b2-82db-2f66-889374ec7fe6">
+                <div netlify="" data-netlify="true" class="w-layout-grid brix---form-grid-2-columns">
                   <div><label for="Naam" class="brix---input-label">Naam*</label><input class="brix---input w-input" maxlength="256" name="Naam" data-name="Naam" placeholder="Naam Voornaam" type="text" id="Naam" required=""></div>
                   <div><label for="email" class="brix---input-label">Email*</label><input class="brix---input w-input" maxlength="256" name="email" data-name="email" placeholder="voorbeeld@outlook.com" type="email" id="email" required=""></div>
                   <div><label for="Telefoon" class="brix---input-label">Telefoon*</label><input class="brix---input w-input" maxlength="256" name="Telefoon" data-name="Telefoon" placeholder="(+32) 123 56 78 90" type="tel" id="Telefoon" required=""></div>
