--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ input {
   <div data-animation="default" data-collapse="small" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="lynx-navbar w-nav">
     <div class="lynx-nav-block">
       <div class="lynx-nav">
-        <a href="#" class="lynx-brand w-nav-brand"><img src="images/DBM-site.png" loading="lazy" sizes="(max-width: 479px) 18vw, 86px" srcset="images/DBM-site-p-500.png 500w, images/DBM-site-p-800.png 800w, images/DBM-site-p-1080.png 1080w, images/DBM-site-p-1600.png 1600w, images/DBM-site-p-2000.png 2000w, images/DBM-site-p-2600.png 2600w, images/DBM-site-p-3200.png 3200w, images/DBM-site.png 11811w" alt="" class="lynx-logo"></a>
+        <a href="#" class="lynx-brand w-nav-brand"><img src="images/goldlogo.png" loading="lazy" sizes="(max-width: 479px) 18vw, 86px" srcset="images/DBM-site-p-500.png 500w, images/DBM-site-p-800.png 800w, images/DBM-site-p-1080.png 1080w, images/DBM-site-p-1600.png 1600w, images/DBM-site-p-2000.png 2000w, images/DBM-site-p-2600.png 2600w, images/DBM-site-p-3200.png 3200w, images/goldlogo.png 11811w" alt="" class="lynx-logo"></a>
       </div>
       <div class="lynx-nav">
         <nav role="navigation" class="lynx-nav-menu w-nav-menu">
@@ -166,7 +166,7 @@ input {
                 </div>
                 <div data-anim="img-hover" style="-webkit-transform:translate3d(0, -45em, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, -45em, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, -45em, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, -45em, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="home__img mod--2">
                   <div data-anim="layer" class="img__hover"></div>
-                  <div class="home__star-wrap"><img src="images/DBM-site.png" loading="lazy" sizes="(max-width: 991px) 100vw, 80px" srcset="images/DBM-site-p-500.png 500w, images/DBM-site-p-800.png 800w, images/DBM-site-p-1080.png 1080w, images/DBM-site-p-1600.png 1600w, images/DBM-site-p-2000.png 2000w, images/DBM-site-p-2600.png 2600w, images/DBM-site-p-3200.png 3200w, images/DBM-site.png 11811w" alt="" class="home__star"></div>
+                  <div class="home__star-wrap"><img src="images/goldlogo.png" loading="lazy" sizes="(max-width: 991px) 100vw, 80px" srcset="images/DBM-site-p-500.png 500w, images/DBM-site-p-800.png 800w, images/DBM-site-p-1080.png 1080w, images/DBM-site-p-1600.png 1600w, images/DBM-site-p-2000.png 2000w, images/goldlogo.png 2600w, images/DBM-site-p-3200.png 3200w, images/goldlogo.png 11811w" alt="" class="home__star"></div>
                 </div>
               </div>
             </div>
@@ -320,7 +320,7 @@ input {
       </section>
       <div class="lynx-footer">
         <div class="lynx-block-footer-center">
-          <div class="lynx-text-footer">All rights reserved</div><img src="images/DBM-site.png" loading="lazy" sizes="64px" srcset="images/DBM-site-p-500.png 500w, images/DBM-site-p-800.png 800w, images/DBM-site-p-1080.png 1080w, images/DBM-site-p-1600.png 1600w, images/DBM-site-p-2000.png 2000w, images/DBM-site-p-2600.png 2600w, images/DBM-site-p-3200.png 3200w, images/DBM-site.png 11811w" alt="" class="lynx-logo-footer-center">
+          <div class="lynx-text-footer">All rights reserved</div><img src="images/goldlogo.png" loading="lazy" sizes="64px" srcset="images/DBM-site-p-500.png 500w, images/DBM-site-p-800.png 800w, images/DBM-site-p-1080.png 1080w, images/DBM-site-p-1600.png 1600w, images/DBM-site-p-2000.png 2000w, images/DBM-site-p-2600.png 2600w, images/DBM-site-p-3200.png 3200w, images/goldlogo.png 11811w" alt="" class="lynx-logo-footer-center">
           <a href="#" class="lynx-link-footer">De boormeester</a>
         </div>
         <div class="lynx-social">
