--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@ input {
   <div data-animation="default" data-collapse="small" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="lynx-navbar w-nav">
     <div class="lynx-nav-block">
       <div class="lynx-nav">
-        <a href="#" class="lynx-brand w-nav-brand"><img src="images/DBM-site.png" loading="lazy" sizes="(max-width: 479px) 18vw, 86px" srcset="images/DBM-site-p-500.png 500w, images/DBM-site-p-800.png 800w, images/DBM-site-p-1080.png 1080w, images/DBM-site-p-1600.png 1600w, images/DBM-site-p-2000.png 2000w, images/DBM-site-p-2600.png 2600w, images/DBM-site-p-3200.png 3200w, images/DBM-site.png 11811w" alt="" class="lynx-logo"></a>
+        <a href="#" class="lynx-brand w-nav-brand"><img src="images/goldlogo.png" loading="lazy" sizes="(max-width: 479px) 18vw, 86px" srcset="images/goldlogo.png 500w, images/goldlogo.png 800w, images/goldlogo.png 1080w, images/goldlogo.png 1600w, images/goldlogo.png 2000w, images/goldlogo.png 2600w, images/goldlogo.png 3200w, images/goldlogo.png 11811w" alt="" class="lynx-logo"></a>
       </div>
       <div class="lynx-nav">
         <nav role="navigation" class="lynx-nav-menu w-nav-menu">
@@ -256,7 +256,7 @@ input {
   </div>
   <div class="lynx-footer">
     <div class="lynx-block-footer-center">
-      <div class="lynx-text-footer">All rights reserved</div><img src="images/DBM-site.png" loading="lazy" sizes="64px" srcset="images/DBM-site-p-500.png 500w, images/DBM-site-p-800.png 800w, images/DBM-site-p-1080.png 1080w, images/DBM-site-p-1600.png 1600w, images/DBM-site-p-2000.png 2000w, images/DBM-site-p-2600.png 2600w, images/DBM-site-p-3200.png 3200w, images/DBM-site.png 11811w" alt="" class="lynx-logo-footer-center">
+      <div class="lynx-text-footer">All rights reserved</div><img src="images/goldlogo.png" loading="lazy" sizes="64px" srcset="images/goldlogo.png 500w, images/goldlogo.png 800w, images/goldlogo.png 1080w, images/goldlogo.png 1600w, images/goldlogo.png 2000w, images/goldlogo.png 2600w, images/goldlogo.png 3200w, images/goldlogo.png 11811w" alt="" class="lynx-logo-footer-center">
       <a href="#" class="lynx-link-footer">De boormeester</a>
     </div>
     <div class="lynx-social">
